--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -701,8 +701,13 @@ section {
   transform-style: preserve-3d;
 }
 
-.services .icon-box .icon i {
+.services .icon-box .icon i,services .icon-box .icon span {
   color: #fff;
+  font-size: 28px;
+}
+
+.home-meterial{
+ color: #fff;
   font-size: 28px;
 }
 
@@ -745,6 +750,10 @@ section {
 }
 
 .services .icon-box:hover .icon i {
+  color: #69bd45;
+}
+
+.services .icon-box:hover .icon .home-meterial {
   color: #69bd45;
 }
 
