--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -506,12 +506,19 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 
+
+@media (max-width: 636px) {
+  #hero h2{
+    font-size: 27px;
+  }
+}
+
 @media (max-width: 768px) {
   #hero {
-    height: 90vh;
+    height: 60vh;
   }
   #hero .carousel-item {
-    height: 90vh;
+    height: 60vh;
   }
 }
 
